# swift-tracker

./: .env.example  .env.render  .gitignore  CMakeLists.txt  Dockerfile  README.md  RENDER_DEPLOYMENT.md  docker-compose.yml  run_backend.ps1  run_frontend.ps1  smoke_debug.ps1  smoke_test.ps1  smoke_test_decode.ps1  smoke_test_final.ps1  smoke_test_quick.ps1
frontend/: .env  .env.production  Dockerfile  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AmbientLightRays.jsx  Button.jsx  Card.jsx  ElectricBorder.css  ElectricBorder.jsx  LightRays.css  LightRays.jsx  Loader.jsx  MagicCardEffects.jsx  Modal.jsx  Navbar.jsx  RotatingText.jsx  SectionBorder.jsx  ShipmentActionButton.jsx  Sidebar.jsx  StatCard.jsx
frontend/src/hooks/: usePageReveal.js
frontend/src/layouts/: AuthLayout.jsx  DashboardLayout.jsx
frontend/src/pages/: AdminPanel.jsx  AgentPanel.jsx  HomePageV2.jsx  LoginPage.jsx  NotFoundPage.jsx  SenderDashboard.jsx  TrackingPage.jsx
frontend/src/services/: api.js  ws.js
frontend/src/store/: authStore.js  shipmentStore.js  trackingStore.js
frontend/src/utils/: format.js
include/config/: Config.h
include/controllers/: AdminController.h  AgentController.h  AnalyticsController.h  AuthController.h  ShipmentController.h  TrackingController.h
include/database/: DatabaseManager.h  HubRepository.h  NotificationRepository.h  ShipmentRepository.h  TrackingRepository.h  UserRepository.h
include/middleware/: AuthMiddleware.h  CorsMiddleware.h  LoggerMiddleware.h
include/models/: Analytics.h  HubCity.h  Notification.h  Route.h  Shipment.h  TrackingEvent.h  User.h
include/services/: AgentService.h  AnalyticsService.h  AuthService.h  NotificationService.h  RouteEngine.h  ShipmentService.h  TrackingService.h
include/utils/: DateTimeUtils.h  JsonUtils.h  JwtUtils.h  PasswordUtils.h  PriceCalculator.h  TrackingNumberGenerator.h  ValidationUtils.h
sql/: schema.sql
src/: main.cpp
src/controllers/: AdminController.cpp  AgentController.cpp  AnalyticsController.cpp  AuthController.cpp  ShipmentController.cpp  TrackingController.cpp
src/database/: DatabaseManager.cpp  HubRepository.cpp  NotificationRepository.cpp  ShipmentRepository.cpp  TrackingRepository.cpp  UserRepository.cpp
src/middleware/: AuthMiddleware.cpp  CorsMiddleware.cpp  LoggerMiddleware.cpp
src/services/: AgentService.cpp  AnalyticsService.cpp  AuthService.cpp  NotificationService.cpp  RouteEngine.cpp  ShipmentService.cpp  TrackingService.cpp
src/utils/: DateTimeUtils.cpp  JsonUtils.cpp  JwtUtils.cpp  PasswordUtils.cpp  PriceCalculator.cpp  TrackingNumberGenerator.cpp  ValidationUtils.cpp
